k8s/gha-runner/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gha-runner
  namespace: conjur
  labels:
    app: gha-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gha-runner
  template:
    metadata:
      labels:
        app: gha-runner
    spec:
      imagePullSecrets:
        - name: dockerhub-pull
      containers:
        - name: gha-runner
          image: aslancarlos/gha-runner:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "20m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          readinessProbe:
            httpGet:
              path: /api/gha/healthz
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/gha/healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
