k8s/gha-runner/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gha-runner
  namespace: conjur
  labels:
    app: gha-runner
spec:
  selector:
    app: gha-runner
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
